# FIAP-MLE-book-store

./: .dockerignore  .gitignore  .slugignore  API_AUTH_DOCS.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  INDEX.md  Makefile  PROJECT_SUMMARY.md  Procfile  QUICKSTART.md  README.md  SETUP.md  app.json  docker-compose.yml  pyproject.toml  requirements.txt  run_api.py  run_dashboard.py  run_scraper.py  setup.py
.cursor/: CODE_REVIEW.md  CODE_STANDARDS.md  DEPLOY_WORKFLOW.md
.github/: DEPLOY_WORKFLOW.md
api/: README.md  __init__.py  app.py  config.py  routes.py  scraping_routes.py  swagger_config.py  wsgi.py
api/auth/: decorators.py  models.py  routes.py
api/controllers/: __init__.py  book_controller.py  scraping_controller.py
api/repositories/: __init__.py  book_repository.py
api/templates/: metrics.html  metrics_login.html
dashboard/: README.md  api_client.py  app.py  auth.py  requirements-dashboard.txt
dashboard/.streamlit/: config.toml
data/: users.csv.example
docs/: AUTHENTICATION.md  QUICK_START.md  TROUBLESHOOTING.md
examples/: README.md  api_examples.py  auth_scraping_example.py  scraper_examples.py
scraper/: README.md  __init__.py  base_scraper.py  book_scraper.py  data_processor.py  main.py
scripts/: create_user.py  deploy.sh  test_env.sh
tests/: test_api.py  test_auth.py  test_scraper.py  test_scraping.py
